--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -651,6 +651,46 @@
       (gcmh-mode 1))
   #+end_src
 * LSP
+** lsp-mode
+   #+begin_src emacs-lisp
+     (use-package lsp-mode
+       :ensure t
+       :commands (lsp lsp-deferred)
+       :config
+       :custom ((lsp-completion-provider             :none)
+                (lsp-keymap-prefix                   "C-c l")
+                (lsp-log-io                          t)
+                ;; (lsp-eldoc-render-all               . t)
+                (lsp-keep-workspace-alive            nil)
+                (lsp-document-sync-method            2)
+                (lsp-response-timeout                5)
+                (lsp-headerline-breadcrumb-icons-enable  nil)
+                (lsp-enable-file-watchers           nil))
+       :hook (lsp-mode-hook . lsp-headerline-breadcrumb-mode)
+       :init (use-package lsp-ui
+               :ensure t
+               :after lsp-mode
+               :custom ((lsp-ui-doc-enable             t)
+                        (lsp-ui-doc-position           'at-point)
+                        (lsp-ui-doc-header             t)
+                        (lsp-ui-doc-include-signature  t)
+                        (lsp-ui-doc-max-width          150)
+                        (lsp-ui-doc-max-height         30)
+                        (lsp-ui-doc-use-childframe     nil)
+                        (lsp-ui-doc-use-webkit         nil)
+                        (lsp-ui-peek-enable            t)
+                        (lsp-ui-peek-peek-height       20)
+                        (lsp-ui-peek-list-width        50))
+               :bind (nil
+                      :map lsp-ui-mode-map
+                           ([remap xref-find-definitions] . lsp-ui-peek-find-definitions)
+                           ([remap xref-find-references] . lsp-ui-peek-find-references)
+                      :map lsp-mode-map
+                           ("C-c s" . lsp-ui-sideline-mode)
+                           ("C-c d" . lsp-ui-doc-mode)
+                           )
+               :hook ((lsp-mode-hook . lsp-ui-mode))))
+#+end_src
 ** eglot
    #+begin_src emacs-lisp
      (use-package eglot
@@ -677,7 +717,9 @@
        :ensure t
        :after flymake
        :config
-       (add-hook 'flymake-mode-hook #'flymake-diagnostic-at-point-mode))
+       (add-hook 'flymake-mode-hook #'flymake-diagnostic-at-point-mode)
+       (remove-hook 'flymake-diagnostic-functions 'flymake-proc-legacy-flymake)
+       )
    #+end_src
 * Programing Langs
 ** General
@@ -1218,5 +1260,33 @@
        :if (display-graphic-p)
        :config
        (atomic-chrome-start-server)
+       )
+   #+end_src
+
+   #+begin_src emacs-lisp
+     (use-package lsp-ltex
+       :ensure t
+       :init
+       (defconst my-os-type
+         (pcase system-type
+           ('darwin "mac")
+           ('gnu/linux "linux")
+           (_ nil)))
+       (defvar ltex-ls-version "16.0.0")
+       (defvar ltex-ls-tar-file (expand-file-name (format "~/.config/emacs/.cache/lsp/ltex-ls-%s.tar.gz" ltex-ls-version)))
+       (defvar ltex-ls-install-dir (file-name-as-directory (expand-file-name "~/.config/emacs/.cache/lsp/ltex-ls")))
+       (unless (file-exists-p ltex-ls-install-dir)
+         (let ((ltex-ls-url (format "https://github.com/valentjn/ltex-ls/releases/download/%s/ltex-ls-%s-%s-x64.tar.gz"
+                                    ltex-ls-version ltex-ls-version my-os-type)))
+           (message "Downloading ltex-ls...")
+           (url-copy-file ltex-ls-url ltex-ls-tar-file)
+           (message "Extracting ltex-ls...")
+           (make-directory ltex-ls-install-dir)
+           (let ((default-directory ltex-ls-install-dir))
+             (shell-command (format "tar xvfz %s" ltex-ls-tar-file)))
+           (make-symbolic-link (concat ltex-ls-install-dir (format "ltex-ls-%s"  ltex-ls-version)) (concat ltex-ls-install-dir "latest") t)))
+       :hook (org-mode . (lambda ()
+                           (require 'lsp-ltex)
+                           (lsp-deferred)))  ; or lsp-deferred
        )
    #+end_src
